RESOLVED FIXED220465
REGRESSION: Unchecked JS exception: getOwnNonIndexPropertyNames @ ./runtime/JSObject.cpp:2494
https://bugs.webkit.org/show_bug.cgi?id=220465
Summary REGRESSION: Unchecked JS exception: getOwnNonIndexPropertyNames @ ./runtime/J...
Ryan Haddad
Reported 2021-01-08 09:49:25 PST
Seeing the following on the debug JSC bot with modules.yaml/modules/module-namespace-is-frozen.js and modules.yaml/modules/namespace.js ERROR: Unchecked JS exception: This scope can throw a JS exception: getOwnNonIndexPropertyNames @ ./runtime/JSObject.cpp:2494 (ExceptionScope::m_recursionDepth was 8) But the exception was unchecked as of this scope: getOwnPropertyNames @ ./runtime/JSModuleNamespaceObject.cpp:223 (ExceptionScope::m_recursionDepth was 7) Unchecked exception detected at: 1 0x10af03bce JSC::VM::verifyExceptionCheckNeedIsSatisfied(unsigned int, JSC::ExceptionEventLocation&) 2 0x10aedbcaf JSC::ThrowScope::~ThrowScope() 3 0x10aedbea5 JSC::ThrowScope::~ThrowScope() 4 0x10ad13a1a JSC::JSModuleNamespaceObject::getOwnPropertyNames(JSC::JSObject*, JSC::JSGlobalObject*, JSC::PropertyNameArray&, JSC::DontEnumPropertiesMode) 5 0x10adf3a5a bool JSC::testIntegrityLevel<(JSC::IntegrityLevel)1>(JSC::JSGlobalObject*, JSC::VM&, JSC::JSObject*) 6 0x10adf12c8 JSC::objectConstructorIsFrozen(JSC::JSGlobalObject*, JSC::CallFrame*) 7 0x31d915a01178 8 0x109894ee2 llint_entry 9 0x109894ee2 llint_entry 10 0x109894ee2 llint_entry 11 0x109873770 vmEntryToJavaScript 12 0x10a75ffab JSC::JITCode::execute(JSC::VM*, JSC::ProtoCallFrame*) 13 0x10a7622a5 JSC::Interpreter::executeModuleProgram(JSC::ModuleProgramExecutable*, JSC::JSGlobalObject*, JSC::JSModuleEnvironment*) 14 0x10ad259d9 JSC::JSModuleRecord::evaluate(JSC::JSGlobalObject*) 15 0x10aa57c9e JSC::AbstractModuleRecord::evaluate(JSC::JSGlobalObject*) 16 0x10ad12f85 JSC::JSModuleLoader::evaluateNonVirtual(JSC::JSGlobalObject*, JSC::JSValue, JSC::JSValue, JSC::JSValue) 17 0x10ad12eda JSC::JSModuleLoader::evaluate(JSC::JSGlobalObject*, JSC::JSValue, JSC::JSValue, JSC::JSValue) 18 0x10ad17aed JSC::moduleLoaderEvaluate(JSC::JSGlobalObject*, JSC::CallFrame*) 19 0x31d915a01178 20 0x109894e3a llint_entry 21 0x31d915a0a687 22 0x31d915a20c35 23 0x31d915a1ac5e 24 0x31d915a1b34a 25 0x31d915a1f1c9 26 0x109873770 vmEntryToJavaScript 27 0x10a75ffab JSC::JITCode::execute(JSC::VM*, JSC::ProtoCallFrame*) 28 0x10a760767 JSC::Interpreter::executeCall(JSC::JSGlobalObject*, JSC::JSObject*, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 29 0x10aacc1dd JSC::call(JSC::JSGlobalObject*, JSC::JSValue, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 30 0x10aacc4b3 JSC::profiledCall(JSC::JSGlobalObject*, JSC::ProfilingReason, JSC::JSValue, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 31 0x10ad0f411 JSC::JSMicrotask::run(JSC::JSGlobalObject*) 32 0x10af03803 JSC::QueuedTask::run() 33 0x10af03691 JSC::VM::drainMicrotasks() 34 0x1084c2a73 runWithOptions(GlobalObject*, CommandLine&, bool&) 35 0x10847e26a jscmain(int, char**)::$_8::operator()(JSC::VM&, GlobalObject*, bool&) const 36 0x108452843 int runJSC<jscmain(int, char**)::$_8>(CommandLine const&, bool, jscmain(int, char**)::$_8 const&) 37 0x1084502c2 jscmain(int, char**) 38 0x10844fffe main 39 0x7fff6e98ecc9 start 40 0x14 https://build.webkit.org/builders/Apple-Catalina-Debug-JSC-Tests/builds/2148/steps/jscore-test/logs/stdio
Attachments
Radar WebKit Bug Importer
Comment 1 2021-01-08 09:49:56 PST
Yusuke Suzuki
Comment 2 2021-01-08 10:46:45 PST
Note You need to log in before you can comment on or make changes to this bug.