Unreviewed, add missing scope.release() in JSModuleNamespaceObject https://bugs.webkit.org/show_bug.cgi?id=220465

* runtime/JSModuleNamespaceObject.cpp:
(JSC::JSModuleNamespaceObject::getOwnPropertyNames):

Canonical link: https://commits.webkit.org/232883@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271304 268f45cc-cd09-0410-ab3c-d52691b4dbfc